@@ -11,6 +11,7 @@ import lombok.SneakyThrows;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.chrome.ChromeDriverService;
+import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.remote.DesiredCapabilities;
 import org.openqa.selenium.remote.RemoteExecuteMethod;
 import org.openqa.selenium.remote.RemoteWebDriver;
@@ -21,6 +22,7 @@ import org.slf4j.LoggerFactory;
 import org.testng.ITestResult;
 import org.testng.annotations.*;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
@@ -35,17 +37,22 @@ public abstract class GreenCityTestRunner {
     private final String CHROME_LANGUAGE_OPTION = "en";
 
     protected final Logger logger = LoggerFactory.getLogger(this.getClass());
-    protected WebDriver driver;
+    protected RemoteWebDriver driver;
 
+    private ChromeOptions options = new ChromeOptions();
 @SneakyThrows
     @BeforeSuite
     public void beforeSuite() {
+    options.addArguments("--disable-gpu");
+    options.addArguments("--disable-popup-blocking");
+    options.addArguments("--allow-failed-policy-fetch-for-test");
+    options.addArguments("--disable-browser-side-navigation");
+    options.addArguments("--incognito");
+    options.addArguments("--disable-notifications");
+    options.addArguments("--window-size=1920,1080","--no-sandbox","'--disable-dev-shm-usage");
+    options.addArguments("--headless");
         WebDriverManager.chromedriver().setup();
-        GridHub.startLocally();
-        RegisterChrome.startNode(5551);
-        RegisterChrome.startNode(5552);
-        RegisterChrome.startNode(5553);
-        RegisterChrome.startNode(5554);
+
     }
 
     /*  DesiredCapabilities desiredCap = DesiredCapabilities.Chrome();
@@ -59,8 +66,18 @@ public abstract class GreenCityTestRunner {
     @SneakyThrows
     @BeforeClass
     public void setUpBeforeClass() {
-        DesiredCapabilities capability = DesiredCapabilities.chrome();
-        driver = new RemoteWebDriver(new URL("http://localhost:4444/wd/hub"), capability);
+
+        DesiredCapabilities capabilities = DesiredCapabilities.chrome();
+        capabilities.setBrowserName("chrome");
+        capabilities.setVersion("84.0");
+        capabilities.setCapability("enableVNC", true);
+        capabilities.setCapability("enableVideo", false);
+        capabilities.setCapability(ChromeOptions.CAPABILITY,options);
+        driver = new RemoteWebDriver(
+                URI.create("http://35.198.124.146:4444/wd/hub").toURL(),
+                capabilities
+        );
+
         driver.manage().timeouts().implicitlyWait(5, TimeUnit.SECONDS);
         driver.manage().window().maximize();
     }
